--- a/src/app.scss
+++ b/src/app.scss
@@ -20,12 +20,11 @@ img {
 nav {
   width: 100%;
   background: #108db8;
-}
-
-nav a {
-  color: white;
-  padding: 1rem;
-  display: inline-block;
+  a {
+    color: white;
+    padding: 1rem;
+    display: inline-block;
+  }
 }
 
 .content {
