Removed the old page and started creating the new page (imcomplete)

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,32 +1,12 @@
-body {
-  font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
-    Helvetica, Arial, 'Lucida Grande', sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-}
+@import "~bulma/sass/utilities/initial-variables";
+@import "~bulma/sass/utilities/functions";
 
-a {
-  text-decoration: none;
-  color: #108db8;
-  font-weight: bold;
-}
+$body-background-color: rgb(231, 231, 224);
 
-img {
-  max-width: 100%;
-}
+@import "~bulma/sass/utilities/derived-variables";
+@import '~bulma';
 
-nav {
-  width: 100%;
-  background: #108db8;
-  a {
-    color: white;
-    padding: 1rem;
-    display: inline-block;
-  }
-}
-
-.content {
-  padding: 1rem;
+.kit-logo {
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
 }
