--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,34 @@ $body-background-color: rgb(231, 231, 224);
 @import "~bulma/sass/utilities/derived-variables";
 @import '~bulma';
 
-.kit-logo {
-  font-family: 'Lato', sans-serif;
-  font-weight: 900;
+@import './logo.scss';
+
+.kit-youtube {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0px;
+  overflow: hidden;
+  iframe {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.kit-table {
+  display: table;
+  dl {
+    display: table-row;
+  }
+  dt, dd {
+    display: table-cell;
+    padding: 0.5vw 0vw;
+  }
+  dt {
+    color: black;
+    padding-right: 1vw;
+  }
 }
