--- a/packages/web/src/app.css
+++ b/packages/web/src/app.css
@@ -3,3 +3,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@responsive {
+  .text-stroke-3 {
+    text-shadow:
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity))),
+      0 0 0.125rem var(--fallback-b2, oklch(var(--b2) / var(--tw-bg-opacity)));
+  }
+}
